--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_PUBLIC_URL= https://github.com/paul-orchid/pragmatic-scheduler
+REACT_APP_PUBLIC_URL=https://github.com/paul-orchid/pragmatic-scheduler
