--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
   "bugs": {
     "url": "https://github.com/paul-orchid/pragmatic-scheduler/issues"
   },
-  "homepage": "https://github.com/paul-orchid/pragmatic-scheduler#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@mui/x-date-pickers": "^5.0.20",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -81,7 +82,9 @@
     "react-dom": "^18.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.11"
+    "@mui/material": "^5.14.11",
+    "@mui/x-date-pickers": "^5.0.20",
+    "@mui/icons-material": "^5.14.11"
   },
   "browserslist": {
     "production": [
