--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-grid-layout": "^1.3.3",
     "@types/react-resizable": "^3.0.5",
     "@types/react-router": "^5.1.18",
     "babel-jest": "^27.5.1",
@@ -75,6 +76,7 @@
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "react-draggable": "^4.4.6",
+    "react-grid-layout": "^1.4.2",
     "react-resizable": "^3.0.5"
   },
   "peerDependencies": {
