--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-grid-layout": "^1.3.3",
-    "@types/react-resizable": "^3.0.5",
     "@types/react-router": "^5.1.18",
     "babel-jest": "^27.5.1",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -75,9 +74,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
-    "react-draggable": "^4.4.6",
-    "react-grid-layout": "^1.4.2",
-    "react-resizable": "^3.0.5"
+    "react-grid-layout": "^1.4.2"
   },
   "peerDependencies": {
     "react": "^18.1.0",
