--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dist/**/*"
   ],
   "scripts": {
-    "dev:client_old": "react-scripts start",
     "dev:client": "PUBLIC_URL=/ react-scripts start",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
@@ -68,6 +67,7 @@
     "pragmatic-ui": "^2.0.49",
     "prettier": "^2.5.1",
     "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
     "regenerator-runtime": "^0.13.9",
