--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@babel/preset-typescript": "^7.16.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
-    "@mui/x-date-pickers": "^5.0.20",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
+    "@mui/x-date-pickers": "^7.5.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -64,7 +64,7 @@
     "gh-pages": "^6.0.0",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
-    "pragmatic-ui": "^2.0.49",
+    "pragmatic-ui": "^3.0.16",
     "prettier": "^2.5.1",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
@@ -80,18 +80,18 @@
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "react-grid-layout": "^1.4.2"
   },
   "peerDependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
-    "@mui/x-date-pickers": "^5.0.20",
-    "@mui/icons-material": "^5.14.11"
+    "@mui/x-date-pickers": "^7.5.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "browserslist": {
     "production": [
